Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-4763

native btree_implemenation leaks memory [was: EPERF - couchbase ( memcached and beam.smp) go into 99% swap usage while running large cluster tests]

    XMLWordPrintable

Details

    Description

      have observed this on recent large cluster performance test runs

      the performance boxes have 4GB of swap space and during the run we seem to be using all the swap after a while and eventually OOM killer kicks in and terminates memcached.exe process as observed in MB-4761

      Attachments

        For Gerrit Dashboard: MB-4763
        # Subject Branch Project Status CR V

        Activity

          People

            aaron Aaron Miller (Inactive)
            farshid Farshid Ghods (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty