MB-4763 Fix memory leaks in btree NIF

Mallocs got duplicated when adding error checks, removing them.

Change-Id: Ie04876419e13438cb6f86e3e5c35571a7dcb1355
Reviewed-on: http://review.couchbase.org/13018
Tested-by: buildbot <qe@couchbase.com>
Reviewed-by: Damien Katz <damien@couchbase.com>